--- a/index.html
+++ b/index.html
@@ -163,7 +163,8 @@
           <a href="https://wa.me/qr/DBJDLWTEAH3MJ1" target="_blank"><i class="fab fa-whatsapp"></i></a>
           <a href="mailto:monitorusingai@gmail.com" target="_blank"><i class="fas fa-envelope"></i></a>
         </div>
-        <div class="footer-credit">حقوق النشر &copy; 2024 نظام المراقبة بالذكاء الاصطناعي</div>
+        <div class="footer-credit">حقوق النشر&copy;2024نظام المراقبة باستخدام تقنيات الذكاء الاصطناعي
+  </div>
       </div>
     </footer>
 
